tests/should_fail/def_missing_args.jou
def foo:  # Error: expected a '(' to denote the start of function arguments, got ':'
    return
